<resources>
    <string name="app_name">Inventario</string>
    <string name="txvSignIn">Iniciar Sesión</string>
    <string name="txvUser">Usuario</string>
    <string name="txvPassword">Contraseña</string>
    <string name="chkRemember">Recuérdame</string>
    <string name="btnSignUp"><u>Registrarse</u></string>
    <string name="btnSignIn">Acceder</string>
    <string name="btnGoogleSign">Iniciar con Google</string>
    <string name="btnFacebook">Iniciar con Facebook</string>
    <string name="txvName">Nombre</string>

    <string name="txvSignUp">Registrarse</string>
    <string name="txvDescription">Descripcion</string>
    <string name="txvCreationDate">Fecha de Creación</string>
    <string name="btnChangeState">Cambiar estado</string>
    <string name="txvNombre">Nombre:</string>
    <string name="txvSerial" translatable="false">Serial:</string>
    <string name="txvVendedor">Vendedor:</string>
    <string name="txvModelo">Modelo:</string>
    <string name="txvCategoria">Categoria:</string>
    <string name="txvSubcategoria">SubCategoria:</string>
    <string name="txvTipo">Tipo:</string>
    <string name="txvDescripcion">Descripcion:</string>
    <string name="txvPrecio">Precio:</string>
    <string name="txvFCompra">F.Compra:</string>
    <string name="txvUrl" translatable="false">Url:</string>
    <string name="txvNotas">Notas:</string>
    <string name="txvSectorName">Nombre</string>
    <string name="txvSectorDefault">default</string>
    <string name="action_save">menu_save</string>
    <string name="tieName">Escriba el nombre</string>
    <string name="tieSurname">Escriba el nombre corto</string>
    <string name="tieDescription">Escriba la descripcion</string>
    <string name="errorAddDependencyDependencyDuplicate">Dependencia duplicada</string>
    <string name="fragment_listdependency_delete">Eliminar dependencia</string>

    <string name="btnOk">OK</string>
    <string name="btnCancel">Cancelar</string>

</resources>
