<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.inventory.InventoryActivity"
    android:stretchColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txvName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txvName">

        </TextView>

        <EditText
            android:id="@+id/etxName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            tools:ignore="LabelFor">

        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txvSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txvSignUp">

        </TextView>

        <EditText
            android:id="@+id/etxSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            tools:ignore="LabelFor">

        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txvCreationDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txvCreationDate">

        </TextView>

        <EditText
            android:id="@+id/etxCreationDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            tools:ignore="LabelFor">

        </EditText>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="3"
            android:gravity="center"
            tools:ignore="UselessParent">
            <Button
                android:id="@+id/btnChange"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/btnChangeState"/>


        </LinearLayout>

    </TableRow>


</TableLayout>
